# DNS-CPP

./: CMakeLists.txt  Makefile  README.md  RFCs.txt  TODO.txt
include/: dnscpp.h
include/dnscpp/: a.h  aaaa.h  abstractidfactory.h  additional.h  algorithm.h  answer.h  authority.h  bignum.h  bits.h  caa.h  callbacks.h  cname.h  config.h  connecting.h  context.h  core.h  decompressed.h  dnskey.h  exponent.h  extractor.h  handler.h  hosts.h  idfactory.h  idle.h  inbound.h  intrusivequeue.h  intrusivequeueitem.h  ip.h  libev.h  lookup.h  loop.h  message.h  modulo.h  monitor.h  monoticidfactory.h  mx.h  nameserver.h  now.h  ns.h  operation.h  (+28 more)
include/dnscpp/publickey/: rsa.h
src/: .gitignore  CMakeLists.txt  Makefile  blocking.h  canonicalizer.h  compressor.h  connection.h  connector.h  context.cpp  context.d  context.s.d  core.cpp  dnskey.cpp  extractor.cpp  fakeresponse.h  fcntlflags.h  handler.cpp  handler.d  handler.s.d  header.h  hosts.cpp  idgenerator.h  inbound.cpp  input.h  ip.cpp  job.cpp  job.h  libdnscpp.a.1.0.0  libdnscpp.so.1.0.0  localdomain.h  locallookup.h  message.cpp  name.h  nameserver.cpp  now.h  operation.cpp  processors.cpp  query.cpp  query.h  randombits.h  (+23 more)
test/: .gitignore  CMakeLists.txt  a.cpp  a.out  domains.txt  hosts.cpp  lookup.cpp  reverse.cpp  stress.cpp  test_loopback.cpp
